src/objects/peer__Required_Document_Map__c.object
<CustomObject>
    <fields>
        <fullName>peer__Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Required Document Maps</relationshipLabel>
        <relationshipName>Required_Document_Maps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>peer__Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>peer__Document_Name__c</fullName>
        <formula>peer__Required_Document__r.peer__DocumentName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>peer__File_URL__c</fullName>
        <label>File URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>peer__Required_Document__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Required Document</label>
        <referenceTo>peer__RequiredDocument__c</referenceTo>
        <relationshipLabel>Required Document Maps</relationshipLabel>
        <relationshipName>Required_Document_Maps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>peer__Required__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>If this is true, the document has not yet been uploaded.</inlineHelpText>
        <label>Not Yet Uploaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>peer__Retry_Count__c</fullName>
        <label>Retry Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Required Document Map</label>
    <nameField>
        <displayFormat>RDM-{00000000}</displayFormat>
        <label>Required Document Map Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Required Document Maps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>